test/classes/deitz/constructors/test_construct1.good
test_construct1.chpl:12: error: unresolved call 'C(2, 3)'
test_construct1.chpl:4: note: candidates are: C(b: bool)
